--- a/responsive_layout_v3/CSS/style.css
+++ b/responsive_layout_v3/CSS/style.css
@@ -5,6 +5,10 @@
 }
 
 /* Header */
+header {
+    background-color: #d8dfe6;
+}
+
 header h1 {
     text-align: center;
     margin-bottom: 1.5rem;
@@ -16,11 +20,19 @@ nav .navlinks {
     margin: 0 auto;
 }
 
+nav ul li a {
+    text-decoration: none;
+}
+
+
 nav .navlinks li {
     padding: 1rem;
     margin: .2rem;
     text-transform: uppercase;
-    background-color: #C0C0C0
+    background-color: #C0C0C0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    letter-spacing: .1rem;
 }
 
 
@@ -50,9 +62,9 @@ header .me article p {
 }
 
 /* portfolio */
-
 main {
-    overflow: hidden;
+    padding: 2rem 0;
+    background-color: #F0F8FF;
 }
 
 .portfolios header h2 {
@@ -87,7 +99,27 @@ hr {
 
 /* ---hr--- */
 
+/* SKills */
+
+.talent h3 {
+    text-align: center;
+    padding: 1rem;
+}
+
+
+.talent ul li {
+    text-align: center;
+    padding: .5rem;
+}
+
+/* ---skills--- */
+
 /* footer */
+
+footer {
+    background-color: #F0F8FF;
+}
+
 .bottomnav {
     display: flex;
     justify-content: space-between;
@@ -113,8 +145,19 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .8rem;
+    padding: 0 .5rem;
 }
+
+.mobilenav p a {
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.mobilenav p a:hover {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 
 /* hiding bottom nav */
 .gone {
@@ -132,3 +175,44 @@ p {
 }
 
 /* ---clearfix--- */
+
+
+/* Media queries */
+@media only screen and (min-width: 768px) {
+
+    /* header */
+    header .navlinks {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    nav .navlinks li {
+        background-color: transparent;
+    }
+
+    .shortbio {
+        display: block;
+        float: left;
+        text-align: left;
+        color: blue;
+    }
+
+    .me .background {
+        float: right;
+        padding: 0 1rem;
+    }
+
+    /* ---header--- */
+
+    /* main */
+
+    /* ---main--- */
+}
+
+
+
+
+
+/* ---Media queries--- */
