--- a/responsive_layout_v3/CSS/style.css
+++ b/responsive_layout_v3/CSS/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Xanh Mono', monospace;
 }
 
 /* Header */
@@ -11,7 +12,9 @@ header {
 
 header h1 {
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin: 0;
+    padding: 1.5rem 0;
+
 }
 
 nav .navlinks {
@@ -57,19 +60,25 @@ section article .background {
 }
 
 header .me article p {
-    padding: 0 .5rem;
+    padding: 1rem;
     text-align: center;
 }
 
 /* portfolio */
 main {
-    padding: 2rem 0;
     background-color: #F0F8FF;
 }
 
-.portfolios header h2 {
+.portolfios {
+    padding: 2rem 0;
+}
+
+
+
+.portfolios h2 {
     text-align: center;
     padding: 2rem 0;
+    text-transform: uppercase;
 }
 
 .portfolios img {
@@ -101,9 +110,9 @@ hr {
 
 /* SKills */
 
-.talent h3 {
+.talent {
+    margin: 2rem auto;
     text-align: center;
-    padding: 1rem;
 }
 
 
@@ -145,7 +154,7 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 .5rem;
+    margin-left: 3rem;
 }
 
 .mobilenav p a {
@@ -181,38 +190,84 @@ p {
 @media only screen and (min-width: 768px) {
 
     /* header */
-    header .navlinks {
+    .nav {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
     }
 
-    nav .navlinks li {
-        background-color: transparent;
+    .nav h1 {
+        padding-left: 1rem;
     }
 
-    .shortbio {
-        display: block;
-        float: left;
-        text-align: left;
-        color: blue;
+    nav .navlinks li {
+        display: inline-block;
+        background-color: transparent;
     }
 
     .me .background {
         float: right;
-        padding: 0 1rem;
+        margin: 2rem;
+    }
+
+    #shortbio {
+        text-align: left;
+        width: 60%;
+        padding-top: 4.5rem;
     }
 
     /* ---header--- */
 
     /* main */
+    #hide {
+        display: none;
+    }
+
+    main {
+        width: 100%;
+    }
+
+    .portfolios article {
+        width: 50%;
+        float: left;
+    }
+
 
     /* ---main--- */
+
+    /* footer */
+    .mobilenav {
+        display: none;
+    }
+
+    .bottomnav {
+        display: inline-block;
+    }
+
+    .bottomnav h3 {
+        padding-left: 1rem;
+    }
+
+    .gone {
+        display: flex;
+        flex-direction: row;
+    }
+
+    /* ---footer--- */
+
 }
 
 
+@media screen and only (min-width: 1025px) {
 
+    main {
+        width: 100%;
+    }
 
+    .portfolios article {
+        width: 16.67;
+        float: left;
+    }
+}
 
 /* ---Media queries--- */
